fiddling with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - export PYTHONPATH=$PYTHONPATH:exampleProject/
   - pip install -r paperThinRest/requirements.txt
 # command to run tests
-script: nosetests
+script: nosetests paperThinRest/ exampleProject/
